# pytombo

./: .gitignore  README.md  app.py  controller.py  main.py  pyproject.toml  requirements.txt  transcricao_exemplo.txt  view.py
deploy/: Caddyfile.snippet  NOTES.md  pytombo-web.service  pytombo-webhook.service  pytombo.service  webhook.py
docs/: metadata.md  plan.md  progress.md  sources.md
model/: Data_loader.py  Image_preprocessor.py  Ocr_reader.py  Relation_extractor.py  __init__.py
web/config/: settings.py  urls.py
web/manuscripts/: admin.py  apps.py  imageinfo.py  models.py  parsing.py
web/manuscripts/management/commands/: backfill_manuscripts.py
web/manuscripts/migrations/: 0001_initial.py  0002_alter_manuscript_options_manuscript_image_no_and_more.py
web/manuscripts/static/manuscripts/: preview.js  transcribe.css
web/pages/: views.py
web/pages/templates/pages/: home.html
web/templates/: base.html
